--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "homepage": "https://github.com/zurb/foundation-apps",
   "devDependencies": {
     "front-matter": "^0.2.0",
+    "grunt": "^0.4.5",
+    "grunt-contrib-sass": "^0.8.1",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-concat": "^2.4.1",
