--- a/package.json
+++ b/package.json
@@ -24,21 +24,24 @@
   },
   "homepage": "https://github.com/zurb/foundation-apps",
   "devDependencies": {
+    "browserify": "^7.0.0",
+    "browserify-shim": "^3.8.1",
     "front-matter": "^0.2.0",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-concat": "^2.4.1",
     "gulp-front-matter": "^1.0.0",
     "gulp-karma": "0.0.4",
+    "gulp-rsync": "^0.0.4",
     "gulp-ruby-sass": "^0.7.1",
     "gulp-sass": "1.2.3",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
-    "gulp-rsync": "^0.0.4",
     "karma-jasmine": "^0.2.0",
     "karma-phantomjs-launcher": "^0.1.4",
     "protractor": "^1.3.1",
-    "through2": "^0.6.2"
+    "through2": "^0.6.2",
+    "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
     "connect-modrewrite": "^0.7.9",
